--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<ins>
+			This is a Heading
+		</ins>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
