--- a/main.html
+++ b/main.html
@@ -7,16 +7,15 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by student --><header>
 	<div>
 		<ins>
-			This is a Heading
-		</ins>
-		
+				This is a Heading
+		</ins>	
 	</div>
+	</header>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
 
 </html>
