--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student --><header>
-	<div>
+	<div class="container">
 		<ins>
 				This is a Heading
 		</ins>	
