--- a/main.html
+++ b/main.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student --><header>
-	<div class="container">
-		<ins>
-			
-				This is a Heading
-			
-				
-		</ins>	
-	</div>
-	</header>
+	<div class="main">
+		<h1 id="heading">
+			<h1 id="heading">This is a Heading</h1>
+		</h1>
+	</div>		
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 </body>
-
 </html>
